--- a/src/main/docker/cert/cert-nginx.conf
+++ b/src/main/docker/cert/cert-nginx.conf
@@ -1,3 +1,8 @@
+upstream myservice {
+    server $SERVICE_1;
+    server $SERVICE_2;
+}
+
 server {
     listen 80 default;
     server_name $DOMAIN;
@@ -47,7 +52,7 @@ server {
         }
 
         # Proxy to upstream
-        proxy_pass $SERVICE_URL;
+        proxy_pass http://myservice;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
