--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,4 +7,5 @@
 # These owners will be the default owners for everything in the repo.
 # Unless a later match takes precedence, they will be requested for
 # review when someone opens a pull request.
-* @EGI-Federation/admins @EGI-Federation/operations
+
+* @thebe14
