Updated linter config

--- a/.github/linters/mlc_config.json
+++ b/.github/linters/mlc_config.json
@@ -1,10 +1,18 @@
 {
+  "httpHeaders": [
+    {
+      "urls": ["https://docs.github.com/"],
+      "headers": {
+        "Accept-Encoding": "zstd, br, gzip, deflate"
+      }
+    }
+  ],
   "ignorePatterns": [
     {
       "pattern": "^http://localhost"
     },
     {
-      "pattern": "^https://example.com"
+      "pattern": "https://github.com/EGI-Federation/eosc-data-transfer/issues/new"
     }
   ]
 }
