Updated security schemes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -103,6 +103,8 @@ quarkus:
     fail-on-unknown-properties: false
   http:
     port: 8081
+    auth:
+      basic: false
     cors:
       ~: true
     proxy:
