--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -98,7 +98,12 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.55
+    info-version: 1.1.56
+    security-scheme-name: OIDC
+    security-scheme-description: OpenID Connect access token issued by EGI Check-In
+    security-scheme: jwt
+    jwt-security-scheme-value: bearer
+    jwt-bearer-format: JWT
   jackson:
     fail-on-unknown-properties: false
   http:
