Moved the swagger UI endpoint to the root
Version bump

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -18,6 +18,8 @@ CORS_ORIGINS=https:\/\/${SERVICE_DOMAIN}
 CORS_METHODS=HEAD,GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authorization-Storage
 
+QUARKUS_HTTP_ACCESS_LOG_ENABLED=false
+
 
 ####################################################################################################
 ## EGI File Transfer                                                                              ##
