--- a/src/main/docker/cert/cert-nginx.conf
+++ b/src/main/docker/cert/cert-nginx.conf
@@ -9,6 +9,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/html;
     }
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -56,6 +57,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-Path $request_uri;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_cache cache;
         proxy_cache_bypass $cookie_auth_tkt;
