Restore to docker compose 3.9

--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -1,8 +1,9 @@
 ---
-version: '3.3'
+version: '3.9'
 
 networks:
   default:
+    name: eosc
     driver: bridge
 
 volumes:
@@ -37,6 +38,7 @@ services:
       - certificates:/etc/letsencrypt
     healthcheck:
       test: ['CMD', '/opt/status.sh']
+      start_period: 30s
       interval: 1m
       timeout: 5s
     restart: unless-stopped
