--- a/src/main/docker/otelcollector/otelcol-config.yml
+++ b/src/main/docker/otelcollector/otelcol-config.yml
@@ -10,7 +10,7 @@ receivers:
   filelog:
     start_at: beginning
     include:
-      - /usr/logs/data-transfer*/*.json*
+      - /usr/logs/data-transfer/*.json*
 
 exporters:
   otlp:
