--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,13 +28,13 @@ jobs:
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-  
+
     - run: mkdir staging
     - run: mkdir staging/logs
     - run: cp target/quarkus-app/*.jar staging/
-    - run: cp target/quarkus-app/lib/ staging/lib/
-    - run: cp target/quarkus-app/app/ staging/app/
-    - run: cp target/quarkus-app/quarkus/ staging/quarkus/
+    - run: cp -r target/quarkus-app/lib/ staging/lib/
+    - run: cp -r target/quarkus-app/app/ staging/app/
+    - run: cp -r target/quarkus-app/quarkus/ staging/quarkus/
     - run: mkdir staging/logs
     - uses: actions/upload-artifact@v4
       with:
