--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,7 +82,7 @@ quarkus:
     exporter:
       otlp:
         traces:
-          legacy-endpoint: http://localhost:4317
+          endpoint: http://localhost:4317
   micrometer:
     enabled: true
     export:
@@ -102,7 +102,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.68
+    info-version: 1.1.69
     security-scheme-name: OIDC
     security-scheme-description: OpenID Connect access token issued by EGI Check-In
     security-scheme: jwt
