--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
         - GRAFANA_URL=http://grafana:3000
         - TELEMETRY_URL=${OTEL_COLLECTOR_ADDR}
         - CORS_ORIGINS=${CORS_ORIGINS:-.*}
-        - CORS_HEADERS=${CORS_HEADERS:-Origin,Content-Type,Accept}
+        - CORS_HEADERS=${CORS_HEADERS:-Authorization,Authorization-Storage,Origin,Accept,Content-Type}
         - CORS_METHODS=${CORS_METHODS:-GET,POST,PUT,DELETE,OPTIONS}
     links:
       - api
