--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,37 +10,36 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-        
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - run: mkdir staging
-    - run: mkdir staging/logs
-    - run: cp target/quarkus-app/*.jar staging/
-    - run: cp -r target/quarkus-app/lib/ staging/lib/
-    - run: cp -r target/quarkus-app/app/ staging/app/
-    - run: cp -r target/quarkus-app/quarkus/ staging/quarkus/
-    - run: mkdir staging/logs
-    - uses: actions/upload-artifact@v4
-      with:
-        name: Package
-        path: staging
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@4f64ddab9d742a4806eeb588d238e4c311a8397d
+      - run: mkdir -p staging/logs
+      - run: cp target/quarkus-app/*.jar staging/
+      - run: cp -r target/quarkus-app/lib/ staging/lib/
+      - run: cp -r target/quarkus-app/app/ staging/app/
+      - run: cp -r target/quarkus-app/quarkus/ staging/quarkus/
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Package
+          path: staging
+
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
