--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -14,7 +14,7 @@ SERVICE_PORT=443
 
 # Provide regular expression with allowed CORS origins as alternatives (separated by |)
 # If not defined, all origins will be allowed
-CORS_ORIGINS=https:\/\/${SERVICE_DOMAIN}
+CORS_ORIGINS=https:\/\/${SERVICE_DOMAIN}|https?:\/\/(?:.+\.)?eosc\-beyond\.eu?
 CORS_METHODS=HEAD,GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authorization-Storage
 
