--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ eosc:
     destination:
       dcache:
         service: fts
+        #storage: webdav
         auth: token
         protocol: https
         description: dCache
@@ -31,11 +32,13 @@ eosc:
         description: S3 compatible object storage
       s3s:
         service: fts
+        #storage: s3
         auth: keys
         protocol: s3s
         description: S3 compatible object storage over HTTPS
       storm:
         service: fts
+        #storage: webdav
         auth: token
         protocol: https
         description: StoRM
@@ -60,6 +63,7 @@ eosc:
   qos:
     quantiles: [0.95]
     slos: [500] # SLOs expressed in milliseconds
+
 
 quarkus:
   application:
