--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ eosc:
         description: dCache
       s3:
         service: fts
-        #storage: s3
+        storage: minio
         auth: keys
         protocol: s3
         description: S3 compatible object storage
@@ -57,9 +57,10 @@ eosc:
         key-store-file: fts-keystore.jks
         key-store-password: password
     storage:
-#      s3:
-#        name: S3 compatible object storage system
-#        class: egi.eu.S3Storage
+      minio:
+        name: Min.io object storage
+        class: egi.eu.S3Storage
+        timeout: 3000
   qos:
     quantiles: [0.95]
     slos: [500] # SLOs expressed in milliseconds
@@ -113,7 +114,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.73
+    info-version: 1.1.75
     security-scheme-name: OIDC
     security-scheme-description: OpenID Connect access token issued by EGI Check-In
     security-scheme: jwt
