Added implementation of getFileInfo for Minio storage system

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,13 +51,13 @@ eosc:
     storage:
       minio:
         name: Min.io object storage
-        class: egi.eu.S3Storage
+        class: egi.eu.MinioStorage
         auth: keys
         protocol: s3
         timeout: 3000
       webdav:
         name: WebDAV storage
-        class: egi.eu.S3Storage
+        class: egi.eu.MinioStorage
         auth: token
         protocol: https
   qos:
