feat: Prepared for K8s deployment

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -12,9 +12,6 @@ SERVICE_EMAIL=levente.farkas@egi.eu
 SERVICE_DOMAIN=localhost
 SERVICE_PORT=443
 
-# Provide regular expression with allowed CORS origins as alternatives (separated by |)
-# If not defined, all origins will be allowed
-CORS_ORIGINS=https:\/\/${SERVICE_DOMAIN}|https?:\/\/(?:.+\.)?eosc\-beyond\.eu?
 CORS_METHODS=HEAD,GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authorization-Storage
 
@@ -24,6 +21,9 @@ QUARKUS_HTTP_ACCESS_LOG_ENABLED=false
 ####################################################################################################
 ## EGI File Transfer                                                                              ##
 ####################################################################################################
+
+# The FTS service to use
+FTS_URL=transfer-engine-url
 
 # Password for (optional) keystore of EGI FTS service
 FTS_KEY_STORE_PASSWORD=password
