--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -52,13 +52,16 @@ services:
     build:
       context: data-transfer/
     environment:
+      - EOSC_TRANSFER_SERVICE_FTS_URL=${FTS_URL:-https://fts-egi.cern.ch:8446}
       - EOSC_TRANSFER_SERVICE_FTS_KEY_STORE_PASSWORD=${FTS_KEY_STORE_PASSWORD}
+      - EOSC_TRANSFER_SERVICE_FTS_KEY_STORE_FILE=${FTS_KEY_STORE_FILE:-fts-keystore.jks}
       - EOSC_TRANSFER_SERVICE_FTS_TRUST_STORE_PASSWORD=${FTS_TRUST_STORE_PASSWORD}
+      - EOSC_TRANSFER_SERVICE_FTS_TRUST_STORE_FILE=${FTS_TRUST_STORE_FILE:-cern-truststore.jks}
       - QUARKUS_SMALLRYE_OPENAPI_SERVERS=https://${SERVICE_DOMAIN}
       - QUARKUS_LOG_FILE_PATH=/deployments/logs/data-transfer-1.json
       - QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT}
       - QUARKUS_OPENTELEMETRY_TRACER_RESOURCE_ATTRIBUTES=${OTEL_RESOURCE_ATTRIBUTES},service.name=data-transfer
-      - QUARKUS_HTTP_CORS_ORIGINS=/${CORS_ORIGINS:-.*}/
+      - QUARKUS_HTTP_CORS_ORIGINS=\/\/${SERVICE_DOMAIN}|https?:\/\/(?:.+\.)?eosc\-beyond\.eu?
       - QUARKUS_HTTP_CORS_HEADERS=${CORS_HEADERS:-Origin,Content-Type,Accept}
       - QUARKUS_HTTP_CORS_METHODS=${CORS_METHODS:-GET,POST,PUT,DELETE,OPTIONS}
     volumes:
