--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,10 +114,11 @@ quarkus:
     theme: flattop
     urls:
       default: /openapi
+      local: /openapi
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.92
+    info-version: 1.1.93
     security-scheme-name: OIDC
     security-scheme-description: OpenID Connect access token issued by EGI Check-In
     security-scheme: jwt
