feat: Configurable local server in Swagger UI

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -17,6 +17,9 @@ CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authoriza
 
 QUARKUS_HTTP_ACCESS_LOG_ENABLED=false
 
+# Uncomment to add local server to Swagger UI
+#LOCAL_SERVER=,http://localhost:8081
+
 
 ####################################################################################################
 ## EGI File Transfer                                                                              ##
