fix: Explicitly enable metrics export to otelcol

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,6 +88,10 @@ quarkus:
       json:
         enabled: true
   otel:
+    traces:
+      enabled: true
+    metrics:
+      enabled: true
     logs:
       enabled: false
 #    exporter:
