--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -56,7 +56,6 @@ OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:${OTEL_COLLECTOR_PORT}
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
 OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
-PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 
 # Exporter protocol configuration
 OTEL_TRACES_EXPORTER=otlp
@@ -64,7 +63,7 @@ OTEL_METRICS_EXPORTER=otlp
 OTEL_LOGS_EXPORTER=otlp
 
 # OpenTelemetry Resource Definitions
-OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc"
+OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc",service.name=data-transfer
 
 # Metrics Temporality
 OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE=cumulative
