fix: Otel exporter endpoints

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -52,10 +52,10 @@ PROMETHEUS_SERVICE_PORT=9090
 # OpenTelemetry Collector
 OTEL_COLLECTOR_HOST=otelcol
 OTEL_COLLECTOR_PORT=4317
-OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:${OTEL_COLLECTOR_PORT}
-OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
-OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
-OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+OTEL_EXPORTER_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:${OTEL_COLLECTOR_PORT}
+OTEL_EXPORTER_TRACES_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
+OTEL_EXPORTER_METRICS_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
+OTEL_EXPORTER_LOGS_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
 
 # Exporter protocol configuration
 OTEL_TRACES_EXPORTER=otlp
@@ -63,7 +63,7 @@ OTEL_METRICS_EXPORTER=otlp
 OTEL_LOGS_EXPORTER=otlp
 
 # OpenTelemetry Resource Definitions
-OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc",service.name=data-transfer
+OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc"
 
 # Metrics Temporality
 OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE=cumulative
