--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,6 +96,7 @@ quarkus:
       enabled: false
 #    exporter:
 #      otlp:
+#        endpoint: http://localhost:4317
 #        traces:
 #          endpoint: http://localhost:4317
 #        metrics:
@@ -121,7 +122,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.95
+    info-version: 1.1.96
     security-scheme-name: OIDC
     security-scheme-description: OpenID Connect access token issued by EGI Check-In
     security-scheme: jwt
