fix: Use Jaeger as the open telemetry collector

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -41,7 +41,7 @@ TELEMETRY_PORT=8000
 
 # Jaeger
 JAEGER_SERVICE_PORT=16686
-JAEGER_COLLECTOR_PORT=4319
+JAEGER_COLLECTOR_PORT=4317
 
 # Loki
 LOKI_COLLECTOR_PORT=3100
@@ -49,21 +49,12 @@ LOKI_COLLECTOR_PORT=3100
 # Prometheus
 PROMETHEUS_SERVICE_PORT=9090
 
-# OpenTelemetry Collector
-OTEL_COLLECTOR_HOST=otelcol
-OTEL_COLLECTOR_PORT=4317
-OTEL_EXPORTER_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:${OTEL_COLLECTOR_PORT}
+# Use Jaeger as the OpenTelemetry Collector
+OTEL_COLLECTOR_HOST=jaeger
+OTEL_COLLECTOR_ADDR=${OTEL_COLLECTOR_HOST}:4317
+OTEL_EXPORTER_ENDPOINT=http://${OTEL_COLLECTOR_ADDR}
 OTEL_EXPORTER_TRACES_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
 OTEL_EXPORTER_METRICS_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
-OTEL_EXPORTER_LOGS_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
 
-# Exporter protocol configuration
-OTEL_TRACES_EXPORTER=otlp
-OTEL_METRICS_EXPORTER=otlp
-OTEL_LOGS_EXPORTER=otlp
-
-# OpenTelemetry Resource Definitions
+# OpenTelemetry resource definitions
 OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc"
-
-# Metrics Temporality
-OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE=cumulative
