--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,17 +92,9 @@ quarkus:
       enabled: true
     metrics:
       enabled: true
-    logs:
-      enabled: false
-#    exporter:
-#      otlp:
-#        endpoint: http://localhost:4317
-#        traces:
-#          endpoint: http://localhost:4317
-#        metrics:
-#          endpoint: http://localhost:4317
-#        logs:
-#          endpoint: http://localhost:3100
+    exporter:
+      otlp:
+        endpoint: http://localhost:4317
   micrometer:
     enabled: true
     export:
@@ -122,7 +114,7 @@ quarkus:
     urls-primary-name: default
   smallrye-openapi:
     path: /openapi
-    info-version: 1.1.96
+    info-version: 1.1.97
     security-scheme-name: OIDC
     security-scheme-description: OpenID Connect access token issued by EGI Check-In
     security-scheme: jwt
@@ -138,6 +130,7 @@ quarkus:
       enabled: true
       headers: Authorization,Accept,Content-Type
       methods: HEAD,GET,POST,PUT,DELETE,OPTIONS
+      origins: "*"
     proxy:
       proxy-address-forwarding: true
       allow-x-forwarded: true
