--- a/src/main/docker/cert/telemetry.conf
+++ b/src/main/docker/cert/telemetry.conf
@@ -3,6 +3,6 @@ NginxModuleOtelSpanExporter otlp;
 NginxModuleOtelExporterEndpoint $TELEMETRY_URL;
 NginxModuleServiceName ssl-terminator;
 NginxModuleServiceNamespace eosc;
-NginxModuleServiceInstanceId SSLTerminatorId;
+NginxModuleServiceInstanceId $HOSTNAME;
 NginxModuleResolveBackends ON;
 NginxModuleTraceAsError ON;
