feat: Automatic telemetry resource attributes service.namespace, service.name, and service.instance.id

--- a/src/main/docker/.env.template
+++ b/src/main/docker/.env.template
@@ -17,8 +17,8 @@ CORS_HEADERS=Origin,X-Requested-With,Content-Type,Accept,Authorization,Authoriza
 
 QUARKUS_HTTP_ACCESS_LOG_ENABLED=false
 
-# Uncomment to add local server to Swagger UI
-#LOCAL_SERVER=,http://localhost:8081
+# Uncomment allow calling local server from Swagger UI
+#LOCAL_SERVER=,https://localhost,http://localhost:8081
 
 
 ####################################################################################################
@@ -55,6 +55,3 @@ OTEL_COLLECTOR_ADDR=${OTEL_COLLECTOR_HOST}:4317
 OTEL_EXPORTER_ENDPOINT=http://${OTEL_COLLECTOR_ADDR}
 OTEL_EXPORTER_TRACES_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
 OTEL_EXPORTER_METRICS_ENDPOINT=${OTEL_EXPORTER_ENDPOINT}
-
-# OpenTelemetry resource definitions
-OTEL_RESOURCE_ATTRIBUTES="service.namespace=eosc"
